@@ -154,7 +154,7 @@ EXTER object  sSAinhibit_macro_specialA ;
 EXTER  object   fLnot   (object x0) ; 
 EXTER  object   fLnot   (object x0) ; 
 EXTER  object   fLsymbolp   (object x0) ; 
-EXTER  object   fLatom     (object x0) ; 
+EXTER  object   fLatom    (object x0) ; 
 EXTER  object   fLconsp   (object x0) ; 
 EXTER  object   fLlistp   (object x0) ; 
 EXTER  object   fLnumberp   (object x0) ; 
@@ -180,7 +180,7 @@ EXTER  object   fLeql   (object x0,object x1) ;
 EXTER  object   fLequal   (object x0,object x1) ; 
 EXTER  object   fLequalp   (object x0,object x1) ; 
 EXTER  object   fScontains_sharp_comma   (object x0) ; 
-EXTER  object   fSspicep     (object x0) ; 
+EXTER  object   fSspicep    (object x0) ; 
 EXTER  object   fSfixnump   (object x0) ; 
 EXTER  object   fLset   (object symbol,object value) ; 
 EXTER  object   fSfset   (object sym,object function) ; 
