@@ -14,8 +14,9 @@ gcl (2.5.4-1) unstable; urgency=low
   * Windows installer updates from CVS HEAD
   * fix potential longjmp clobber in read.d;add some windows files to
     main makefile clean target;
+  * Darwin revealed fixes to usig.c and unixtime.c
 
- -- Camm Maguire <camm@enhanced.com>  Sat, 19 Jul 2003 16:41:52 -0400
+ -- Camm Maguire <camm@enhanced.com>  Sun, 20 Jul 2003 14:00:38 -0400
 
 gcl (2.5.3-2) unstable; urgency=low
 
